--- a/sass/partials/_modules.scss
+++ b/sass/partials/_modules.scss
@@ -45,3 +45,10 @@ article {
     }
   }
 }
+.lt-ie9 {
+  article {
+    .description {
+      width: 444px;
+    }
+  }
+}
